--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,3 +6,5 @@ html
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js', type='text/javascript')
   body
     block content
+
+    script(src='/js/app.js')
